# wiki-ingenia2025

./: A1.md  A2.md  A3.md  A5.md  D1.md  D2.md  Defectos.md  F1.md  F2.md  GEMMA.md  Introducción.md  Paradas.md  Producción.md  README.md
.obsidian/: graph.json  workspace.json
Obsidian/: A3.md  D1.md  D2.md  F2.md  GitBash.md  Introducción.md  Obsidian y GitHub.md  Obsidian.md  Producción.md  Requisitos Previos - ROS2.md
ROS2 Humble/calibration_module_2025/: README.md  calibracionROS.cpp  calibracionTreste_fixedlaser_20240521_metal.script
ROS2 Humble/ingenia_mastermind_2025/src/mastermind/: CMakeLists.txt  package.xml
ROS2 Humble/ingenia_mastermind_2025/src/mastermind/include/mastermind/: bed_controller.hpp  calibration.hpp  master.hpp
ROS2 Humble/ingenia_mastermind_2025/src/mastermind/mastermind/: interface_node.py  interface_window.py
ROS2 Humble/ingenia_mastermind_2025/src/mastermind/scripts/: interface.py
ROS2 Humble/ingenia_mastermind_2025/src/mastermind/src/: bed_controller.cpp  calibration.cpp  master.cpp
scripts/: convert_links.py
